# rose_shared_variables

./: CMakeLists.txt  package.xml
include/rose_shared_variables/: common.hpp  shared_variable.hpp
include/shared_variables/: common.hpp  shareable.hpp  shared_bool.hpp  shared_int32_t.hpp  shared_list.hpp  shared_string.hpp  shared_variable.hpp  shared_variables.hpp  shared_vector.hpp  update_engine.hpp
src/: bool_shared_variable_server.cpp  common.cpp  shared_variable.cpp  shared_variables.cpp  test_read_client.cpp  test_server.cpp  test_write_client.cpp
