<?xml version="1.0"?>
<package>
  <name>shared_variables</name>
  <version>0.0.0</version>
  <description>shared_variables package</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rose20_common</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rose20_common</run_depend>

  <export>

  </export>
</package>