<?xml version="1.0"?>
<package>
  <name>rose_shared_variables</name>
  <version>0.0.0</version>
  <description>rose_shared_variables package</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>luctor_classes</build_depend>
  <build_depend>rose_conversions</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>luctor_classes</run_depend>
  <run_depend>rose_conversions</run_depend>

  <export>

  </export>
</package>